# Charcon_DC_Wallbox

./: DC Wall Box_Activity_Timeline.pptx  DCWB_Failure_Case_List.xlsx  OPL_DC_Wallbox.xlsx  README.md  readme.txt
Documentation/: .$DCWallBox_Wiring_Schematic.drawio.bkp  DCWallBox_Wiring_Schematic.drawio  DIE_Design_Spec.docx  Unintended_Fast_Transmission_of_CAN_frames.pptx
HMI/HMI_LVGL/: .gitmodules  CMakeLists.txt  README.md  lv_conf.h  main.c  sub.c  sub.h
HMI/HMI_LVGL/charcon/assets/: arrow_up.c  back_button.c  cancel_icon.c  charcon_icon.c  cloud_connect.c  cloud_failure.c  cloud_icon.c  error_icon.c  green_check.c  home_icon.c  icon_charging.c  icon_connect.c  icon_connect_error.c  icon_good.c  icon_location.c  icon_money.c  icon_network.c  icon_not_plug.c  icon_power.c  icon_profile.c  icon_wifi.c  img_cost.c  img_loader.c  img_network_1.c  img_network_2.c  img_network_3.c  img_network_4.c  img_network_5.c  img_no_network.c  img_signal.c  img_tot.c  log_icon.c  red_check.c  red_failure.c  settings_icon.c  vsecc_icon.c  white_confg.c  wifi_1.c  wifi_2.c  wifi_3.c  (+2 more)
HMI/HMI_LVGL/charcon/controller/: controller.c  controller.h  progress_page_nav.c  progress_page_nav.h
HMI/HMI_LVGL/charcon/view/: admin_access.c  admin_access.h  admin_page.c  admin_page.h  allpage_icons.c  allpage_icons.h  allpage_signals.c  allpage_signals.h  colors.h  device_detect.c  device_detect.h  health_check.c  health_check.h  launch_screen.c  launch_screen.h  progress_screen.c  progress_screen.h  pub_mqtt.c  pub_mqtt.h  styles.c  styles.h  wifi_screen.c  wifi_screen.h
swDev/DIE/: init.py  (+24 more)
(+58 files in other folders)
